# parallel_matrix_multi

./: CMakeLists.txt  README.md  main.cpp
benchmarks/: benchmark_plotter.py  benchmark_results.csv  run_benchmarks.sh
include/: benchmarks.hpp  parallel_matrix.hpp  sequential_matrix.hpp
src/: benchmarks.cpp  main.cpp
